examples/bioma/platform/registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: charts-registry
  namespace: flux-system
spec:
  type: ExternalName
  externalName: k3d-veoveo-registry.localhost
  ports:
    - name: registry
      port: 5000
      targetPort: 5000
