examples/bioma/platform/registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: charts-registry
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - charts-registry.argocd.svc.cluster.local
  rules:
    - host: charts-registry.argocd.svc.cluster.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: charts-registry-backend
                port:
                  number: 5000
